# tomographer

./: .gitignore  .gitmodules  .travis.yml  01-get-started.md  02-download.md  03-api-doc.md  CMakeLists.txt  ChangeLog.md  LICENSE.txt  Makefile  Makefile.old  ObjectGraph.indd  README.md  README.txt  VERSION_update.sh  _config.yml  boom.xcf  cmake_uninstall.cmake.in  common.h  eigpyconv.cxx  eigpyconv.h  index.html  mk_dist.py  mystyle.css  pyhistogram.cxx  pyhistogram.h  pylogger.cxx  pylogger.h  pytomorun.cxx  sanitize_macosx_binary.py  setup.py  test_pytomorun.ipynb  testscript.py  testscript2.py  testscript3.py  tomographerbase.cxx  tomorun-config-sample
cxx/: CMakeLists.txt
cxx/lib/: dmintegrator.h  integrator.h  loggers.h  matrq.h  param_herm_x.h  qutil.h  tomoproblem.h
cxx/test/: .gitignore  CMakeLists.txt  Makefile  boost_test_logger.h  minimal_tomorun.cxx  test_densedm_densedmtypes.cxx  test_densedm_distmeasures.cxx  test_densedm_distmeasures_common.h  test_densedm_dmmhrw.cxx  test_densedm_dmtypes.cxx  test_densedm_figofmerit.cxx  test_densedm_indepmeasllh.cxx  test_densedm_param_common.h  test_densedm_param_rho_a.cxx  test_densedm_tspacefigofmerit.cxx  test_densedm_tspacellhwalker.cxx  test_histogram.cxx  test_integrator_basic.cxx  test_lib_basics.cxx  test_loggers.cxx  test_mathtools_check_derivatives.cxx  test_mathtools_pos_semidef_util.cxx  test_mathtools_random_unitary.cxx  test_mathtools_simple_find_zero.cxx  test_mathtools_solveclyap.cxx  test_mathtools_sphcoords.cxx  test_mh_random_walk.h  test_mh_random_walk_common.h  test_mhrw.cxx  test_mhrw_bin_err.cxx  test_mhrw_valuehist_tasks.cxx  test_mhrwstatscollectors.cxx  test_mhrwtasks.cxx  test_misc.cxx  test_multi_omp.cxx  test_multi_tasks_common.h  test_multiproc.cxx  test_multiprocomp.cxx  test_param.cxx  test_qit_util.cxx  (+20 more)
cxx/test/tomorun/: test_tomorun_1qubit_analytic_solution.mat  test_tomorun_1qubit_analytic_solution_check.cxx  test_tomorun_1qubit_analytic_solution_mkdata.m
cxx/tomographer/: CMakeLists.txt  dmintegrator.h  dmllhintegrator.h  dmmhrw.h  histogram.h  integrator.h  loggers.h  matrq.h  mhrw.h  mhrw_bin_err.h  mhrwtasks.h  multiproc.h  multiprocomp.h  tomographer_version.h.in  tomoproblem.h  tomosetting.h
cxx/tomographer/densedm/: densedmtypes.h  dmmhrw.h  dmtypes.h  figofmerit.h  indepmeasllh.h  param_herm_x.h  param_rho_a.h
cxx/tomographer/mathtools/: check_derivatives.h  pos_semidef_util.h  random_unitary.h  solveclyap.h  sphcoords.h
cxx/tomographer/qit/: dist.h  matrq.h  param_herm_x.h  param_rho_a.h  pos_semidef_util.h  random_unitary.h  simple_find_zero.h  solveclyap.h  sphcoords.h  util.h
cxx/tomographer/tools/: check_derivatives.h  conststr.h  cxxutil.h  eigen_assert_exception.h  eigenutil.h  ezmatio.h  fmt.h  loggers.h  signal_status_report.h  sphcoords.h  util.h
cxx/tomographer2/: CMakeLists.txt  histogram.h  mhrw.h  mhrw_bin_err.h  mhrw_valuehist_tasks.h  mhrwstatscollectors.h  mhrwtasks.h  multiproc.h  multiprocomp.h  tomographer_version.h.in  valuecalculator.h
cxx/tomographer2/densedm/: densellh.h  distmeasures.h  dmtypes.h  indepmeasllh.h  param_herm_x.h  param_rho_a.h  tspacefigofmerit.h  tspacellhwalker.h
cxx/tomographer2/mathtools/: check_derivatives.h  pos_semidef_util.h  random_unitary.h  solveclyap.h  sphcoords.h
cxx/tomographer2/tools/: boost_test_logger.h  cxxutil.h  eigen_assert_exception.h  eigenutil.h  ezmatio.h  fmt.h  loggers.h  needownoperatornew.h  signal_handler.h  signal_status_report.h
cxx/tomorun/: CMakeLists.txt  ezmatio.h  tomorun.cxx  tomorun_config.h  tomorun_dispatch.h  tomorun_opts.h
py/: CMakeLists.txt  MANIFEST.in  README.rst  README_.rst  jpyprogress.py  setup.cfg  setup.py  setup_sources.py  test_pytomorun.ipynb  testscript.py  testscript2.py  testscript3.py
py/cxx/: common_p.h  eigpyconv.cxx  py_operators_p.h  pydensedm.cxx  pyhistogram.cxx  pylogger.cxx  pymhrw.cxx  pymhrwtasks.cxx  pymultiproc.cxx  pytomorun.cxx  tomographerbase.cxx  tomographerpy.cxx
py/cxx/tomographerpy/: common.h  eigpyconv.h  exc.h  pydensedm.h  pygil.h  pyhistogram.h  pylogger.h  pymhrw.h  pymhrwtasks.h  pymultiproc.h  randwalks.h
py/tomographer/: __init__.py  jpyutil.py  querrorbars.py
py/tomographer/include/: __init__.py
test/: CMakeLists.txt  minimal_mpi_tomorun.cxx  minimal_single_random_walk.cxx  minimal_tomorun.cxx  minimal_tomorun_adjusted.cxx  minimal_tomorun_controlled.cxx  py_gen_pickle_data.py  pyruntest.py  pytest_pickle.py  pytest_t_densedm.py  pytest_t_jpyutil.py  pytest_t_mhrwtasks.py  pytest_t_multiproc.py  pytest_t_querrorbars.py  pytest_t_tomorun.py  pytest_t_tools_densedm.py  pytest_tomographer.py  pytests.py  test_densedm_distmeasures.cxx  test_densedm_distmeasures_common.h  test_densedm_dmtypes.cxx  test_densedm_indepmeasllh.cxx  test_densedm_param_common.h  test_densedm_param_herm_x.cxx  test_densedm_param_rho_a.cxx  test_densedm_tspacefigofmerit.cxx  test_densedm_tspacellhwalker.cxx  test_header.cxx.skeleton  test_histogram.cxx  test_mathtools_check_derivatives.cxx  test_mathtools_pos_semidef_util.cxx  test_mathtools_random_unitary.cxx  test_mathtools_simple_find_zero.cxx  test_mathtools_solveclyap.cxx  test_mathtools_sphcoords.cxx  test_mh_random_walk_common.h  test_mhrw.cxx  test_mhrw_bin_err.cxx  test_mhrw_valuehist_tasks.cxx  test_mhrw_valuehist_tools.cxx  (+29 more)
test/_pickledata-py2/v4.1/: histograms.pickle  tomorun.pickle
test/_pickledata-py2/v5.0/: densedm.pickle  tomorun.pickle
test/_pickledata-py2/v5.1/: histograms.pickle  tomorun.pickle
test/_pickledata-py2/v5.2/: densedm.pickle  tomorun.pickle
test/_pickledata-py3/v4.1/: histograms.pickle  (+1 more)
test/tomorun/: test_tomorun_1qubit_analytic_solution.mat  test_tomorun_1qubit_analytic_solution_check.cxx  test_tomorun_1qubit_analytic_solution_mkdata.m  test_tomorun_run.py
test/travis/: fix_clang-libstdcxx-gcc4_for_pybind-2-2-0.patch  travis-build-and-test.sh  travis-install-linux.sh  travis-install-osx.sh  travis-install.sh
tomorun/: CMakeLists.txt  README.md  tomorun.cxx  tomorun_config.h  tomorun_dispatch.h  tomorun_figofmerit.h  tomorun_helpers.h  tomorun_opts.h
(+9260 files in other folders)
